Adding file exclusions to MyST

--- a/myst.yml
+++ b/myst.yml
@@ -11,7 +11,8 @@ project:
   jupyter:
     binder:
       repo: https://github.com/UCB-stat-159-f25/final-shrija-owen-allison.git
-
+  exclude:
+    - readme.md
 site:
   template: book-theme
 
