--- a/myst.yml
+++ b/myst.yml
@@ -12,7 +12,7 @@ project:
     binder:
       repo: https://github.com/UCB-stat-159-f25/final-shrija-owen-allison.git
   exclude:
-    - readme.md
+    - README.md
 site:
   template: book-theme
 
