--- a/myst.yml
+++ b/myst.yml
@@ -17,16 +17,11 @@ site:
   template: book-theme
 
 toc:
-
-  - file: title_page.ipynb
-    title: Home
-  
-  - file: main.ipynb
-
-  - file: parent_eda.ipynb
-
-  - file: student_eda.ipynb
-
-  - file: regression_analysis.ipynb
-
+  - file: title_page.ipynb 
+  - section: Chapters     
+    parts:
+      - file: main.ipynb
+      - file: parent_eda.ipynb
+      - file: student_eda.ipynb
+      - file: regression_analysis.ipynb
 
